RESOLVED FIXED95865
[Chromium] history.{push,replace}State should no longer be V8EnabledAtRuntime
https://bugs.webkit.org/show_bug.cgi?id=95865
Summary [Chromium] history.{push,replace}State should no longer be V8EnabledAtRuntime
Mihai Parparita
Reported 2012-09-05 10:27:26 PDT
[Chromium] history.{push,replace}State should no longer be V8EnabledAtRuntime
Attachments
Patch (7.31 KB, patch)
2012-09-05 10:30 PDT, Mihai Parparita
no flags
Mihai Parparita
Comment 1 2012-09-05 10:30:38 PDT
Mihai Parparita
Comment 2 2012-09-05 10:32:08 PDT
I would like to eventually make these into V8EnabledPerContext (so that Chrome packaged apps can disable them), so I didn't want to have any confusion with this flag.
WebKit Review Bot
Comment 3 2012-09-05 10:33:20 PDT
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
WebKit Review Bot
Comment 4 2012-09-05 18:32:18 PDT
Comment on attachment 162277 [details] Patch Clearing flags on attachment: 162277 Committed r127674: <http://trac.webkit.org/changeset/127674>
WebKit Review Bot
Comment 5 2012-09-05 18:32:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.