[Chromium] history.{push,replace}State should no longer be V8EnabledAtRuntime https://bugs.webkit.org/show_bug.cgi?id=95865

Reviewed by Darin Fisher.

Source/WebCore:

r55549 made them be runtime-enabled (since the Chromium implementation
was not complete at the time), but they've been enabled by default
since http://crrev.com/41850

* bindings/generic/RuntimeEnabledFeatures.cpp:
(WebCore):
* bindings/generic/RuntimeEnabledFeatures.h:
(RuntimeEnabledFeatures):
* page/History.idl:

Source/WebKit/chromium:

Make WebRuntimeFeatures::{enablePushState,isPushStateEnabled} into
no-ops.

* public/WebRuntimeFeatures.h:
(WebRuntimeFeatures):
* src/WebRuntimeFeatures.cpp:
(WebKit::WebRuntimeFeatures::enablePushState):
(WebKit::WebRuntimeFeatures::isPushStateEnabled):


Canonical link: https://commits.webkit.org/113776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127674 268f45cc-cd09-0410-ab3c-d52691b4dbfc